--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,7 @@ compatibility_date = "2024-01-01"
 
 [vars]
 TEMP_EMAIL_DOMAIN = "zerostore.tech"
+ADMIN_USER_ID = "1462157376"
 
 [[d1_databases]]
 binding = "DB"
