--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "db:migrate": "wrangler d1 execute temp-email-db --remote --file=./src/db/schema.sql"
+    "db:create": "wrangler d1 create temp-email-db",
+    "db:migrate": "wrangler d1 execute temp-email-db --file=./src/db/schema.sql",
+    "db:migrate:prod": "wrangler d1 execute temp-email-db --file=./src/db/schema.sql --remote"
   },
   "dependencies": {
     "hono": "^4.0.0",
-    "openai": "^4.0.0"
+    "otpauth": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.0.0",
