--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,7 @@ compatibility_date = "2024-01-01"
 [vars]
 TEMP_EMAIL_DOMAIN = "zerostore.tech"
 ADMIN_USER_ID = "1462157376"
+FALLBACK_EMAIL = "didit.pamuji@gmail.com"
 
 [[d1_databases]]
 binding = "DB"
